--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-apt-divert (0.2lliurex23) jammy; urgency=medium
+
+  * Jammy release
+
+ -- Juanma1980 <juanma1980@gmail.com>  Wed, 06 Sep 2023 10:32:18 +0200
+
 lliurex-apt-divert (0.2) focal; urgency=medium
 
   * Focal release
